--- a/application.yml
+++ b/application.yml
@@ -4,4 +4,4 @@ eureka:
           prefer-ip-address: true
      client:
           service-url:
-               defaultZone: http://localhost:${server.port}/eureka
+               defaultZone: http://localhost:8761/eureka
